--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
    <style>
       body {
          margin: 0;
-         border: 10px solid #192b36;
       }
       img {
          max-width: 100%;
@@ -15,9 +14,6 @@
    </style>
 </head>
 <body>
-   <img src="header.jpg" alt="">
-   <img src="hero.jpg" alt="">
-   <img src="acustica.jpg" alt="">
-   <img src="clasica.jpg" alt="">
+   <img src="nueva-version.jpg" alt="">
 </body>
 </html>
