--- a/index.html
+++ b/index.html
@@ -1,31 +1,188 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Invie</title>
-   <style>
-      body {
-         margin: 0;
-      }
-      img {
-         max-width: 100%;
-         vertical-align: top;
-      }
-      img#responsive {
-         display: none;
-      }
-      @media screen and (max-width: 768px){
-         img#responsive {
-            display: block;
-         }
-         img{
-            display: none;
-         }
-      }
-   </style>
-</head>
-<body>
-   <img src="invie-responsive.png" alt="" id="responsive">
-   <img src="nueva-version.jpg" alt="">
-</body>
-</html>
+<html>
+	<head>
+		<title>Invie - tus mejores guitarras!!</title>
+		<meta charset="utf-8"/>
+		<!-- <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- <link rel="stylesheet" media="(max-width: 800px)" href="css/media-querie.css"> -->
+		<style>
+				@font-face{font-family:'icomoon';src:url(./fonts/icomoon.eot?r9hw0);src:url(./fonts/icomoon.eot?r9hw0#iefix) format("embedded-opentype"),url(./fonts/icomoon.ttf?r9hw0) format("truetype"),url(./fonts/icomoon.woff?r9hw0) format("woff"),url(./fonts/icomoon.svg?r9hw0#icomoon) format("svg");font-weight:400;font-style:normal}[class*=" icon-"]{font-family:'icomoon'!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-menu:before{content:"\e9bd"}body{font-family:'Allerta',sans-serif;margin:0}.contenedor{max-width:800px;margin:auto;position:relative}.background{background-image:url(./images/background.png);background-size:cover}.button{border-radius:12px;border:none;background:#fd324e;color:#fff;padding:7px 12px;text-decoration:none;font-size:18px;background:linear-gradient(to left,#fe344e,#ff7250)}.titulo{font-family:'Montserrat',sans-serif;font-size:70px;margin-bottom:15px;margin-top:70px}.titulo span{text-decoration:underline}.title-a{font-size:24px;margin-top:0}.guitarras{color:#1F313C;margin-bottom:60px}.guitarras h2{font-family:'Montserrat',sans-serif;font-size:35px}.portada{color:#fff;padding:20px;height:500px}.menu{font-size:24px;display:inline-block;position:absolute;right:0}.menu li{display:inline-block;margin-left:30px}.menu li:before{content:"⊚";font-size:25px;line-height:50px;color:#fff}.menu a{color:#fff;text-decoration:none}.logotipo{display:inline-block;margin-left:0}.header{position:relative}.burguer-button{width:40px;border-radius:50%;line-height:40px;height:40px;background:#395667;display:inline-block;text-align:center;position:fixed;left:20px;top:20px;z-index:3;display:none}.video-demo{max-width:500px;width:100%;border:5px solid #3c5b6e}.video-demo-contenedor{display:flex;justify-content:center;margin-bottom:80px}@media screen and (max-width: 800px){.titulo{font-size:45px;margin-top:30px}.title-a{font-size:18px}.portada{height:auto}.portada .button{margin-bottom:30px;display:inline-block}.video-demo-contenedor{margin-bottom:30px}.guitarras{text-align:center}}@media screen and (max-width: 650px){.header{text-align:center}.logotipo{margin:0}.menu{position:static;display:block}.menu li:first-child{margin:0}.menu ul{padding:0}}@media screen and (max-width: 500px){.portada .button{display:block}.burguer-button{display:block}.portada .contenedor{position:static}.menu{background:rgba(255,60,88,.8);position:fixed;left:-100%;top:0;z-index:2;bottom:0;right:0;display:flex;width:100%;align-items:center}.menu ul{flex:1}.menu li{display:block;margin:0;padding:8px 0;border-bottom:1px solid #fff}.menu li:before{display:none}.menu li:first-child{border-top:1px solid #fff}.portada{text-align:center}.titulo{font-size:30px}.video-demo-contenedor{margin:0 10px 30px}}.video-responsive-contenedor{position:relative;padding-top:56.25%}.video-responsive-src{position:absolute;left:0;right:0;top:0;bottom:0;width:100%;height:100%}@media screen and (-webkit-min-device-pixel-ratio: 2){.background{background-image:url(./images/background2x.png)}}
+		</style>
+	</head>
+	<body>
+		<section id="portada" class="portada background"> <!-- portada -->
+			<header id="header" class="header contenedor"> <!-- header -->			
+				<figure class="logotipo"><!-- logotipo -->
+					<img src="images/invie.png" srcset="images/invie.png 1x, images/invie2x.png 2x" width="186" height="60" alt="Invie logotipo">
+				</figure>
+				<span class="burguer-button icon-menu" id="burguer-button"></span>
+				<nav class="menu" id="menu"><!-- menu -->
+					<ul>
+						<li>
+							<a href="index.html">Home</a>
+						</li>
+						<li>
+							<a href="#guitarras">Guitarras</a>
+						</li>	
+						<li>
+							<a href="precios.html">Precios</a>
+						</li>	
+					</ul>
+				</nav>	
+			</header>
+			<div class="contenedor">
+				<h1 class="titulo">Guitarras <span>invi</span>esibles</h1><!-- titulo -->
+				<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+				<a class="button" href="#guitarras">Conoce mas</a><!-- botón -->
+			</div>
+		</section>
+		<section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
+			<h2>Nuestras guitarras</h2><!-- titulo -->
+				<div class="video-demo-contenedor">
+					<div class="video-demo">
+						<div class="video-responsive-contenedor">
+							<iframe class="video-responsive-src" width="560" height="315" src="https://www.youtube.com/embed/R1dW8M4EqYY" frameborder="0" allowfullscreen></iframe>
+						</div>	
+					</div>
+				</div>		
+			<article class="guitarra"><!-- guitarra 1 -->
+				<img class="derecha" data-src="images/invie-acustica.png | images/invie-acustica2x.png" alt="Guitarra Invie Acustica" width="300">
+				<div class="contenedor-guitarra-a">
+					<h3 class="title-b">Invie acustica</h3>
+					<ol>
+						<li>Estilo vintage</li>
+						<li>Madera pura</li>
+						<li>Incluye archivo invisible de aluminio</li>
+					</ol>
+				</div>	
+			</article>
+			<article class="guitarra b"><!-- guitarra 2 -->
+				<img class="izquierda" data-src="images/invie-classic.png | images/invie-classic2x.png" alt="Guitarra Invie Classic" width="300">
+				<div class="contenedor-guitarra-b">
+					<h3 class="title-b">Invie Classic</h3>
+					<ol>
+						<li>Estilo vintage</li>
+						<li>Liviana</li>
+						<li>Inicia tu camino como Rockstar</li>
+					</ol>
+				</div>	
+			</article>		
+		</section>
+		<footer class="footer"> <!-- Footer -->
+			<div class="contenedor">
+				<div class="contacto">
+					<img data-src="images/invie-white.png" alt="logotipo blanco"/>
+					<a href="tel:+573024456678"><strong>Telefono</strong><span>3024456678</span></a>
+					<a href="mailto:contacto@invie.com"><strong>E-mail</strong><span>contacto@invie.com</span></a>
+				</div>
+				<form class="formulario">
+					<div class="col1">
+						<label for="nombre">Nombre</label>
+						<input type="text" required id="nombre" name="nombre">
+						<label for="email">E-mail</label>
+						<input type="email" required id="email" name="email">
+						<div class="sexo">
+							<label for="mujer">
+								<input type="radio" id="mujer" checked name="sexo" value="mujer">mujer
+							</label>
+							<label for="hombre">
+								<input type="radio" id="hombre" checked name="sexo" value="hombre">hombre
+							</label>
+						</div>
+						<div class="intereses">	
+							<label for="cotizacion">
+							<input type="checkbox" id="cotizacion" checked name="intereses" value="cotizacion"> Cotización
+							</label>
+							<label for="reclamos">
+							<input type="checkbox" id="reclamos" checked name="intereses" value="reclamos"> Reclamos
+							</label>
+							<label for="comentarios">
+							<input type="checkbox" id="comentarios" checked name="intereses" value="comentarios"> Comentarios
+							</label>
+							<label for="otros">
+							<input type="checkbox" id="otros" checked name="intereses" value="otros"> Otros</label>
+						</div>	
+					</div>
+						<div class="col2">
+							<label for="comentarios">Comentarios</label>
+							<textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
+							<input type="submit" name="comentarios" value="Enviar" class="button"/>
+						</div>
+				</form>
+			</div>
+		</footer>
+		<script type="text/javascript">
+			//Script para la carga de los fonts
+		  WebFontConfig = {
+		    google: { families: [ 'Montserrat:400,700:latin', 'Allerta::latin' ] }
+		  };
+		  (function() {
+		    var wf = document.createElement('script');
+		    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+		    wf.type = 'text/javascript';
+		    wf.async = 'true';
+		    var s = document.getElementsByTagName('script')[0];
+		    s.parentNode.insertBefore(wf, s);
+		  })(); 
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js">
+			//Script para cargar la libreria de hammerjs
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.6.2/blazy.min.js">
+			//Script para cargar la libreria de lazy loading
+		</script>
+		<script>
+			var consulta = window.matchMedia('(max-width: 500px)');
+			consulta.addListener(mediaQuery);
+
+			var $burguerButton = document.getElementById('burguer-button');
+			var $menu = document.getElementById('menu');
+			function toggleMenu(){
+				$menu.classList.toggle('active')
+			};
+
+			function showMenu(){
+				$menu.classList.add('active')
+			};
+
+			function hideMenu(){
+				$menu.classList.remove('active')
+			};
+				
+			function mediaQuery(){
+					if (consulta.matches) {
+					//si se cumple hagamos esto
+					console.log('se cumplio la condicion');
+					$burguerButton.addEventListener('touchstart', toggleMenu);
+				} else {
+					//si no se cumple hagamos esto
+					console.log('no se cumplio la condicion');
+					$burguerButton.removeEventListener('touchstart', toggleMenu);
+				}	
+			}
+
+			mediaQuery()
+
+			// lazy loading - Se carga la fuente del script con anterioridad
+			var blazy = new Blazy({
+				//options
+				selector: 'img'
+			});
+			
+			// $burguerButton.addEventListener('touchstart', toggleMenu);
+
+			// function toggleMenu(){
+			// 	$menu.classList.toggle('active')
+			// };
+
+			//Gestos touch
+			var $body = document.body;
+
+			var gestos = new Hammer($body);
+			gestos.on('swipeleft', hideMenu);
+			gestos.on('swiperight', showMenu);
+		</script>
+		<link rel="stylesheet" href="css/invie.min.css">
+	</body>	
+</html>	
